Bug fix - navbar covering text on smaller phones.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,8 +350,8 @@ footer h3 {
 }
 
 /* Media Queries */
-/* Media query: small phones (288px and below) */
-@media screen and (max-width: 288px) {
+/* Media query: small phones (425px and below) */
+@media screen and (max-width: 425px) {
     main {
         margin-top: 81px;
     }
